--- a/index.html
+++ b/index.html
@@ -160,10 +160,10 @@ get '/status' => sub {
           flush;
 
           # manda contenido al usuario
-          content 'Hello, world!';
+          content 'Hola, mundo!';
 
           # se puede añadir más contenido al flujo
-          content 'Hello, again!';
+          content 'Hello, world!';
 
           # al terminar se cierra la conexión
           done;
