--- a/index.html
+++ b/index.html
@@ -194,7 +194,8 @@ get '/foo/*' => sub {
                   <h3>Plantillas</h3>
                   <pre>
                       <code data-trim contenteditable>
-                        set 'template'     => 'template_toolkit';
+                        set 'template' => 'template_toolkit';
+set 'layout' => 'main';
                       </code>
                                 </pre>
                   <pre>
